--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,105 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .button-link {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #4CAF50;
+        color: white;
+        text-decoration: none;
+        border-radius: 4px;
+        font-family: Arial, sans-serif;
+        font-size: 16px;
+        }
+        
+        .button-link:hover {
+        background-color: #45a049;
+        }
+        </style>
 </head>
 <body>
     <div>
     <h1>REGISTRATION</h1>
     <a href='index.html'><img src='images/scale_1200.png' alt='' width='500' title='angry dino' /></a>
-    <form name='signup' actiom='#' method='post'>
+    <form id="registerForm" name='signup' actiom='#' method='post'>
         <div>
-            <label>SignIn</label>
-            <input type='email' name='signin'/>
+            <label>Email</label>
+            <input id="email" type='email' name='email' min="1" required/>
+            <div id="emailErrors"></div>
         </div>
         <div>
-            <label>Password</label>
-            <input type='password' name='password'/>
+            <label>Password</label> 
+            <input id="password" type='password' name='password' min="6" required/>
         </div>
-        <input type='submit' name='signup' value='registration'/>
+        <div>
+            <label>Sex</label>
+            <input id="radio" type='radio' name='sex' value='0'/> Man
+            <input id="radio" type='radio' name='sex' value='1'/> Woman
+            <input id="radio" type='radio' name='sex' value='1'/> Dinosaur
+        </div>
+        <div>
+            <label>I agree with the rules</label>
+            <input id="checkbox" type='checkbox' name='rules' required/> 
+        </div>
+        <div>
+            <label>Load photo</label>
+            <input type='file' name='avatar'/> 
+        </div>
+        <div>
+            <label>Year of birth</label>
+            <select name='year'>
+            <option value='2000'>2000</option>
+            <option value='2001'>2001</option>
+            <option value='2002'>2002</option>
+            <option value='2003'>2003</option>
+            <option value='2004'>2004</option>
+            <option value='2005'>2005</option>
+            <option value='2006'>2006</option>
+            <option value='2007'>2007</option>
+            <option value='2008'>2008</option>
+            <option value='2009'>2009</option>
+            <option value='2010'>2010</option>
+            <option value='2011'>2011</option>
+            <option value='2012'>2012</option>
+            <option value='2013'>2013</option>
+            <option value='2014'>2014</option>
+            <option value='2015'>2015</option>
+            <option value='2016'>2016</option>
+            <option value='2017'>2017</option>
+            <option value='2018'>2018</option>
+            <option value='2019'>2019</option>
+            <option value='2020'>2020</option>
+            <option value='2021'>2021</option>
+            <option value='2022'>2022</option>
+            <option value='2023'>2023</option>
+            <option value='2024'>2024</option>
+            <option value='2025'>2025</option>
+            </select>
+        </div>
+        <div>
+            <textarea placeholder='Name your favorite dinosaur'></textarea>
+        </div>
+        <input id="submit" type='submit' name='signup' class="button-link" value='Login'/>
     </form>
-    <a href='page2.html' target='_blank'>страница 2</a>
+    <script>
+        const registerForm = document.registerForm;
+        const submit = registerForm.submit;
+        submit.addEventListener("click", validate);
+         
+        function validate(){
+            if(!registerForm.email.checkValidity()){
+                console.log("Email is not valid");
+            }
+            if(!registerForm.password.checkValidity()){
+                console.log("Password is not valid");
+            }
+            if(!registerForm.checkValidity()){
+                console.log("Form data is not valid");
+            }
+        }
+        </script>
+    <a href='page2.html' target='_blank' class="button-link">Login</a>
     <script type='module' src='./scripts/signin.js'></script>
     <link rel='stylesheet' type='text/css' href='styles.css'/>
 </body>
