--- a/src/index.html
+++ b/src/index.html
@@ -1,57 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        .button-link {
-        display: inline-block;
-        padding: 10px 20px;
-        background-color: #4CAF50;
-        color: white;
-        text-decoration: none;
-        border-radius: 4px;
-        font-family: Arial, sans-serif;
-        font-size: 16px;
-        }
-        
-        .button-link:hover {
-        background-color: #45a049;
-        }
-        </style>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<style>
+		.button-link {
+			display: inline-block;
+			padding: 10px 20px;
+			background-color: #4CAF50;
+			color: white;
+			text-decoration: none;
+			border-radius: 4px;
+			font-family: Arial, sans-serif;
+			font-size: 16px;
+		}
+
+		.button-link:hover {
+			background-color: #45a049;
+		}
+	</style>
 </head>
+
 <body>
-    <div>
-    <h1>REGISTRATION</h1>
-    <a href='index.html'><img src='images/scale_1200.png' alt='' width='500' title='angry dino' /></a>
-    <form id="registerForm" name='signup' actiom='#' method='post'>
-        <div>
-            <label>Email</label>
-            <input id="email" type='email' name='email' min="1" required/>
-            <div id="emailErrors"></div>
+	<div>
+		<h1>REGISTRATION</h1>
+		<a href='index.html'><img src='images/scale_1200.png' alt='' width='500' title='angry dino' /></a>
+			<form id="registerForm" name='registerForm'>
+				<div>
+					<label>Email</label>
+					<input type='text' name='email' class="email field"/>
+					<div id="emailError">error</div>
+				</div>
+				<div>
+					<label class="label">Password</label>
+					<input id="password" type='password' name='password' class='from field'/>
         </div>
-        <div>
-            <label>Password</label> 
-            <input id="password" type='password' name='password' min="6" required/>
+					<div>
+						<label>Sex</label>
+						<input id="radio" type='radio' name='sex' value='0'/> Man
+						<input id="radio" type='radio' name='sex' value='1'/> Woman
+						<input id="radio" type='radio' name='sex' value='1'/> Dinosaur
         </div>
-        <div>
-            <label>Sex</label>
-            <input id="radio" type='radio' name='sex' value='0'/> Man
-            <input id="radio" type='radio' name='sex' value='1'/> Woman
-            <input id="radio" type='radio' name='sex' value='1'/> Dinosaur
+						<div>
+							<label  class="label">I agree with the rules</label>
+							<input id="checkbox" type='checkbox' name='rules' required/>
         </div>
-        <div>
-            <label>I agree with the rules</label>
-            <input id="checkbox" type='checkbox' name='rules' required/> 
+							<div>
+								<label  class="label">Load photo</label>
+								<input type='file' name='avatar'/>
         </div>
-        <div>
-            <label>Load photo</label>
-            <input type='file' name='avatar'/> 
-        </div>
-        <div>
-            <label>Year of birth</label>
-            <select name='year'>
+								<div>
+									<label>Year of birth</label>
+									<select name='year'>
             <option value='2000'>2000</option>
             <option value='2001'>2001</option>
             <option value='2002'>2002</option>
@@ -79,31 +81,14 @@
             <option value='2024'>2024</option>
             <option value='2025'>2025</option>
             </select>
-        </div>
-        <div>
-            <textarea placeholder='Name your favorite dinosaur'></textarea>
-        </div>
-        <input id="submit" type='submit' name='signup' class="button-link" value='Login'/>
+								</div>
+								<div>
+									<textarea placeholder='Name your favorite dinosaur'></textarea>
+								</div>
+								<input id="submit" type='submit' name='signup' class="button-link" value='Login'/>
     </form>
-    <script>
-        const registerForm = document.registerForm;
-        const submit = registerForm.submit;
-        submit.addEventListener("click", validate);
-         
-        function validate(){
-            if(!registerForm.email.checkValidity()){
-                console.log("Email is not valid");
-            }
-            if(!registerForm.password.checkValidity()){
-                console.log("Password is not valid");
-            }
-            if(!registerForm.checkValidity()){
-                console.log("Form data is not valid");
-            }
-        }
-        </script>
-    <a href='page2.html' target='_blank' class="button-link">Login</a>
-    <script type='module' src='./scripts/signin.js'></script>
-    <link rel='stylesheet' type='text/css' href='styles.css'/>
+								<script src='./scripts/signin.js' type="module"></script>
+								<link rel='stylesheet' type='text/css' href='styles.css' />
 </body>
+
 </html>
