--- a/src/page2.html
+++ b/src/page2.html
@@ -1,28 +1,38 @@
-
- <div id="box">
+<div id="box">
         <form name="forma">
-          <div class="item">
-            <h5>Start Task Date</h5>
-            <input type="text" id="start" class="form_input" placeholder="Enter Start Task Date">
+            <h1 class="form_title" >TABLE</h1>
+            <div class="main">
+          <div class="form_item">
+            <label for="start">Start Task Date</label>
+            <input type="date" id="start" class="form_input" placeholder="Enter Start Task Date">
           </div>
           <div class="form_item">
-            <h5>Finish Task Date</h5>
-            <input type="text" id="finish" class="form_input" placeholder="Enter Finish Task Date">
+            <label for="finish">Finish Task Date</label>
+            <input type="date" id="finish" class="form_input" placeholder="Enter Finish Task Date">
           </div>
           <div class="form_item">
-            <h5>Task Name</h5>
+            <label for="taskname">Task Name</label>
             <input type="text" id="taskname" class="form_input" placeholder="Enter Task Name">
           </div>
           <div class="form_item">
-            <h5>Completed</h5>
-            <input type="text" id="taskcomp" class="form_input" placeholder="Enter">
+            <label for="taskcomp">Status</label>
+            <input type="text" id="taskcomp" class="form_input" list="taskcomps" placeholder="Enter Status">
+            <datalist id='taskcomps'>
+                        <option></option>
+                        <option value='Not Started'>Not Started</option>
+                        <option value='In Progress'>In Progress</option>
+                        <option value='Done'>Done</option>
+                        <option value='Failed'>Failed</option>
+                        </datalist>
           </div>
           <div class="form_item">
-            <input type="button" id="btn" value="SAVE">
+            <input type="button" id="btn" class="form_btn" value="SAVE">
+          </div>
           </div>
         </form>
       <div>
-        <table class="table">
+        <table class="table table-bordered">
+            <thead>
             <tr>
               <th scope="col">#</th>
               <th scope="col">Start Task Date</th>
@@ -30,6 +40,7 @@
               <th scope="col">Task Name</th>
               <th scope="col">Task Completed</th>
             </tr>
+            </thead>
           <tbody id="tbody"></tbody>
         </table>
       </div>
