--- a/src/index.html
+++ b/src/index.html
@@ -82,8 +82,9 @@
                         <textarea placeholder='Name your favorite dinosaur'></textarea>
                     </div>
                     
-								
+								<div>
 								<button type='submit' class="form_btn">Enter</button>
+                                </div>
                     </form>
 								<script src='./scripts/signin.js' type="module"></script>
 								<link rel='stylesheet' type='text/css' href='styles.css' />
