--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" type="text/css" href="styles/styles.css" />
   </head>
   <body>
-    <a href="index.html">
-      <img src="images/scale_1200.png" width="700" title="angry dino" class="img" />
-    </a>
+    <div class="form_img">
+      <a href="index.html">
+        <img src="images/scale_1200.png" width="700" title="angry dino" class="img" />
+      </a>
+    </div>
     <form action="#" id="form" class="form">
       <h1 class="form_title">REGISTRATION</h1>
       <div class="main">
