--- a/src/index.html
+++ b/src/index.html
@@ -65,9 +65,9 @@
       </div>
       <div class="form_item">
         <label for="radio" class="form_label">Sex</label>
-        <input type="radio" id="radio" type="radio" name="sex" value="0" /> Man
-        <input type="radio" id="radio" type="radio" name="sex" value="1" /> Woman
-        <input type="radio" id="radio" type="radio" name="sex" value="1" /> Dinosaur
+        <input type="radio" id="radio" name="sex" value="0" /> Man
+        <input type="radio" id="radio1" name="sex" value="1" /> Woman
+        <input type="radio" id="radio2" name="sex" value="2" /> Dinosaur
       </div>
       <div class="form_item">
         <label for="checkbox" class="form_label">I agree with the rules</label>
