--- a/src/page2.html
+++ b/src/page2.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="box">
-      <form name="forma">
+      <form name="form" id="form">
         <h1 class="form_title">TABLE</h1>
         <div class="main">
           <div class="form_item">
@@ -50,7 +50,7 @@
             </datalist>
           </div>
           <div class="form_item">
-            <input type="button" id="btn" class="form_btn" value="SAVE" />
+            <input type="button" id="createTask" class="form_btn" value="SAVE" />
           </div>
         </div>
       </form>
