add filter page

--- a/src/page2.html
+++ b/src/page2.html
@@ -52,13 +52,10 @@
           <div class="form_item">
             <input type="button" id="createTask" class="form_btn" value="SAVE" />
           </div>
-          <div class="form_item">
-            <input type="button" id="removeTask" class="form_btn" value="REMOVE" />
-          </div>
         </div>
       </form>
       <div>
-        <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Find..." />
+        <input type="text" id="input" placeholder="Find..." />
       </div>
       <div>
         <table id="table" class="table table-bordered">
@@ -76,6 +73,7 @@
         </table>
       </div>
     </div>
-    <script src="./scripts/test.js" type="module"></script>
+    <script src="./scripts/table.js" type="module"></script>
+    <script src="./scripts/filter.js" type="module"></script>
   </body>
 </html>
