--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,14 @@
   <body>
     <div class="form_img">
       <a href="index.html">
-        <img src="images/scale_1200.png" width="700" title="angry dino" class="img" />
+        <img
+          src="images/scale_1200.png"
+          width="500"
+          height="500"
+          title="angry dino"
+          class="img"
+          alt="Dinosaur"
+        />
       </a>
     </div>
     <form action="#" id="form" class="form">
