--- a/src/page2.html
+++ b/src/page2.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="box">
+      <h3 id="greeting"></h3>
       <form name="form" id="form">
         <h1 class="form_title">TABLE</h1>
         <div class="main">
@@ -75,5 +76,6 @@
     </div>
     <script src="./scripts/table.js" type="module"></script>
     <script src="./scripts/filter.js" type="module"></script>
+    <script src="./scripts/greeting.js" type="module"></script>
   </body>
 </html>
