--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="styles/styles.css" />
+    <link rel="icon" href="images/icons8-динозавр-50.png" />
   </head>
   <body>
     <div class="form_img">
