--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
         />
       </a>
     </div>
+    <div class="link">
+      <a href="https://www.google.com">Find out anything else</a>
+    </div>
     <form action="#" id="form" class="form">
       <h1 class="form_title">REGISTRATION</h1>
       <div class="main">
@@ -40,7 +43,7 @@
         <div id="password_error" class="errortext"></div>
       </div>
       <div class="form_item">
-        <label for="yearOfBirth'" class="form_label">Year of birth:</label>
+        <label for="yearOfBirth'" class="year">Year of birth:</label>
         <select class="yearOfBirth">
           <option></option>
           <option value="2000">2000</option>
