add minor changes

--- a/src/index.html
+++ b/src/index.html
@@ -84,12 +84,12 @@
         <label for="checkbox" class="form_label">I agree with the rules</label>
         <input id="checkbox" type="checkbox" name="rules" required />
       </div>
-      <div>
+      <div class="label">
         <label class="label">Load photo</label>
         <input type="file" name="avatar" />
       </div>
       <div class="form_title">
-        <h5>Favorite Dinosaur</h5>
+        <h5>Choose Your Favorite Dinosaur</h5>
         <textarea placeholder="Name your favorite dinosaur" class="textarea"></textarea>
       </div>
 
