--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Dinosaur Main</title>
     <link rel="stylesheet" type="text/css" href="styles/styles.css" />
     <link rel="icon" href="images/icons8-динозавр-50.png" />
   </head>
@@ -20,7 +20,7 @@
         />
       </a>
     </div>
-    <div class="link">
+    <div class="search-container">
       <a href="https://www.google.com">Find out anything else</a>
     </div>
     <h1 style="font-size: 45px" class="form_title">REGISTRATION</h1>
@@ -48,10 +48,10 @@
           </div>
         </div>
         <div class="form_item">
-          <label for="yearOfBirth'" class="form_label">Year of birth:</label>
+          <label for="yearOfBirth" class="form_label">Year of birth:</label>
           <div class="form_cont_input">
             <select name="yearOfBirth" class="form_select">
-              <option></option>
+              <option value="">Choose your year of birthday</option>
               <option value="2000">2000</option>
               <option value="2001">2001</option>
               <option value="2002">2002</option>
