--- a/src/page2.html
+++ b/src/page2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Dinosaur Table</title>
     <link rel="stylesheet" type="text/css" href="styles/styles1.css" />
   </head>
   <body>
@@ -70,8 +70,9 @@
           </fieldset>
         </div>
       </form>
-      <div>
+      <div class="search-container">
         <input type="text" id="input" placeholder="Find..." />
+        <img src="images/icons8-поиск.svg" alt="Search icon" class="search-icon" />
       </div>
       <div>
         <table id="table" class="table table-bordered">
