--- a/src/page2.html
+++ b/src/page2.html
@@ -71,7 +71,7 @@
         </div>
       </form>
       <div class="search-container">
-        <input type="text" id="input" placeholder="Find..." />
+        <input class="search-input" type="text" id="input" placeholder="Find..." />
         <img src="images/icons8-поиск.svg" alt="Search icon" class="search-icon" />
       </div>
       <div>
