--- a/src/page3.html
+++ b/src/page3.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="styles/styles.css" />
   </head>
   <body>
-    <button type="usersbutton" class="users_btn">Upload list of all users</button>
+    <button type="button" id="usersbutton" class="users_btn">Upload list of all users</button>
     <div id="users"></div>
     <script src="./scripts/fetch.js" type="module"></script>
   </body>
