add validation check

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
             <div class="form_item">
               <label for="yearOfBirth" class="form_label">Year of birth:</label>
               <div class="form_cont_input">
-                <select name="yearOfBirth" class="form_select">
+                <select name="yearOfBirth" id="year" class="form_select">
                   <option value="">Choose your year of birthday</option>
                   <option value="2000">2000</option>
                   <option value="2001">2001</option>
@@ -107,7 +107,7 @@
             <textarea placeholder="Name your favorite dinosaur" class="textarea"></textarea>
           </div>
 
-          <button type="submit" class="form_btn">Enter</button>
+          <button type="submit" id="submit" class="form_btn">Enter</button>
         </form>
 
         <script src="./scripts/signin.js" type="module"></script>
