--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
             <textarea placeholder="Name your favorite dinosaur" class="textarea"></textarea>
           </div>
 
-          <button type="submit" id="submit" class="form_btn">Enter</button>
+          <button type="submit" id="submit" class="form_btn" disabled>Enter</button>
         </form>
 
         <script src="./scripts/signin.js" type="module"></script>
